# recipes-repository

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  ISSUES.md  Makefile  README.md  README_delete.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  ci.yml.tmpl  deploy-docs.yml  semantic-release.yml
css/: custom.css
database/: recipes.db
docs/: .pages  cicd.md  coding_standards.md  commands.md  devcontainer.md  getting_started.md  index.md  llm_instructions.md  recipe_database.md  recipes.md  release.md
docs/api/recipes/: .gitkeep  index.html  main.html
docs/api/src/: index.html
docs/api/src/recipe-plugin/: index.html  plugin.html
docs/api/tests/: .gitkeep  default_test.html  index.html
docs/boilerplate/: coding_standards.md
docs/css/: custom.css
docs/database/: recipes.db
docs/recipes/: .pages  appeltaart.md  asparagus_linguine.md  baba_ganoush.md  boterkoek.md  breakfast.md  caesar.md  carbonara.md  chili_olie.md  chili_vega.md  christmas_wreath.md  clementine-creme-brulee.md  dessert.md  dutch_veggie_chili.md  fajitas.md  gnocchi_asperges.md  gnocchi_saliepesto.md  gnocchi_spinaziepesto.md  gnocchi_traybake.md  granola copy.md  granola.md  granola_html.md  main.md  marinara.md  matty_matheson_beef_lasagna.md  miso_peanut_ramen_bowls.md  ottolenghi_spinazie_salade.md  passievrucht-posset.md  pico_de_gallo.md  pompoenstoof.md  port_caramelized_onions.md  portobello_steaks.md  ruby_hearts.md  salie_pasta.md  side.md  starter.md  sumac.md  thai_red_curry.md  zoete_aardappelsoep.md
docs/recipes/api/: recipes.json
docs/recipes/breakfast/: .pages  granola.md
docs/recipes/cocktails/: .pages  ruby_hearts.md
docs/recipes/dessert/: appeltaart.md  boterkoek.md  clementine-creme-brulee.md  espresso_martini_brownies.md  passievrucht-posset.md
docs/recipes/main/: .pages  asparagus-linguine.md  baja_fish_tacos.md  bbq_salmon.md  bolognese.md  broken_aubergine_lazagna.md  caesar.md  caponata.md  carbonara.md  chili_vega.md  coconut_curry_ramen.md  coconut_ramen.md  crispy_black_bean_tacos.md  fajitas.md  gnocchi_asperges.md  gnocchi_saliepesto.md  gnocchi_spinaziepesto.md  gnocchi_traybake.md  loempias.md  marinara.md  matty_matheson_beef_lasagna.md  miso_carbonara.md  miso_peanut_ramen_bowls.md  ottolenghi_spinazie_salade.md  pompoenstoof.md  portobello_steaks.md  salie_pasta.md  spaghetti_bami.md  spicy-korean-tofu.md  spicy_korean_tofu.md  thai_red_curry.md  three_bean_salad.md  turmeric_cauliflower.md
docs/recipes/side/: .pages  baba_ganoush.md  chili_olie.md  pico_de_gallo.md  port_caramelized_onions.md  sumac.md  wittekoolsteak.md
docs/recipes/starter/: .pages  christmas_wreath.md  zoete_aardappelsoep.md
docs/tests/: coverage_report.md  test_configuration.md
docs/tests/coverage/: .gitkeep
llm_instructions/: index.html
notebooks/: convert_pdf.ipynb  query_database.ipynb  read_database.ipynb  read_database.py
recipe_database/: index.html
recipes/api/: recipes.json
recipes/appeltaart/: index.html
recipes/boterkoek/: index.html
recipes/breakfast/: index.html
recipes/breakfast/granola/: index.html
recipes/carbonara/: index.html
recipes/chili_vega/: index.html
recipes/cocktails/ruby_hearts/: index.html
recipes/dessert/: index.html
recipes/dessert/appeltaart/: index.html
recipes/dessert/boterkoek/: index.html
recipes/dessert/clementine-creme-brulee/: index.html
recipes/dessert/espresso_martini_brownies/: index.html
recipes/dessert/passievrucht-posset/: index.html
recipes/dutch_veggie_chili/: index.html
recipes/gnocchi_saliepesto/: index.html
recipes/granola/: index.html
recipes/main/: index.html
recipes/main/asparagus-linguine/: index.html
recipes/main/asparagus_linguine/: index.html
recipes/main/baja_fish_tacos/: index.html
recipes/main/bbq_salmon/: index.html
recipes/main/bolognese/: index.html
recipes/main/broken_aubergine_lazagna/: index.html
recipes/main/caesar/: index.html
recipes/main/caponata/: index.html
recipes/main/carbonara/: index.html
recipes/main/chili_vega/: index.html
recipes/main/coconut_curry_ramen/: index.html
recipes/main/coconut_ramen/: index.html
recipes/main/crispy_black_bean_tacos/: index.html
recipes/main/fajitas/: index.html
recipes/main/gnocchi_asperges/: index.html
recipes/main/gnocchi_saliepesto/: index.html
recipes/main/gnocchi_spinaziepesto/: index.html
recipes/main/gnocchi_traybake/: index.html
recipes/main/loempias/: index.html
recipes/main/marinara/: index.html
recipes/main/matty_matheson_beef_lasagna/: index.html
recipes/main/miso_carbonara/: index.html
recipes/main/miso_peanut_ramen_bowls/: index.html
recipes/main/ottolenghi_spinazie_salade/: index.html
recipes/main/pompoenstoof/: index.html
recipes/main/portobello_steaks/: index.html
recipes/main/salie_pasta/: index.html
recipes/main/spaghetti_bami/: index.html
recipes/main/spicy-korean-tofu/: index.html
recipes/main/spicy_korean_tofu/: index.html
recipes/main/thai_red_curry/: index.html
recipes/main/three_bean_salad/: index.html
recipes/main/turmeric_cauliflower/: index.html
recipes/port_caramelized_onions/: index.html
recipes/side/: index.html
recipes/side/baba_ganoush/: index.html
recipes/side/chili_olie/: index.html
recipes/side/pico_de_gallo/: index.html
recipes/side/port_caramelized_onions/: index.html
recipes/side/sumac/: index.html
recipes/side/wittekoolsteak/: index.html
recipes/starter/: index.html
recipes/starter/christmas_wreath/: index.html
recipes/starter/zoete_aardappelsoep/: index.html
recipes/sumac/: index.html
recipes/zoete_aardappelsoep/: index.html
search/: search_index.json
src/recipes/: __init__.py  auto_index.py  generate_index.py  main.py  mkdocs_recipe_plugin.py  parse_pdf.py  parse_recipes.py
src/recipes_repository/: __init__.py  auto_index.py  generate_index.py  mkdocs_recipe_plugin.py  parse_pdf.py  parse_recipes.py
tests/: __init__.py  default_test.py  recipe_plugin_test.py  test_recipe_plugin.py
(+4 files in other folders)
